--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Estephany - Dev & UI/UX Designer</title>
   <link rel="stylesheet" href="./css/style.min.css">
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer Localizadono Rio de Janeiro">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 <body>
   <header class="header">
